--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,13 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #000;
+  color: #fafafa;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.roundButton {
+  border-radius: 50%;
+  width: 12rem;
+  height: 12rem;
+  background: #1e8e81;
+  border: 1px solid #1e8e81;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  font-family: inherit;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 2rem;
+  padding: 2rem;
+  text-decoration: none;
+  text-align: center;
+
+  &:hover, &:active {
+    background: #2ac7b4;
+    border: 1px solid #2ac7b4;
+  }
+
+  &.noMargin {
+    margin-bottom: 0;
+  }
+}
+
+button {
+  margin-bottom: 2rem;
 }
